# numbat

numbat/: Cargo.toml
numbat-cli/: Cargo.toml
numbat-exchange-rates/: Cargo.toml
numbat-exchange-rates/src/: lib.rs
numbat-wasm/: Cargo.toml  build.sh  test.sh
numbat-wasm/src/: lib.rs
numbat/src/: currency.rs  lib.rs  plot.rs
numbat/src/ffi/: plot.rs
