[package]
name = "numbat-wasm"
authors = ["David Peter <mail@david-peter.de>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.90"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
numbat = { path = "../numbat", default-features = false, features = [
    "html-formatter",
] }
html-escape = "0.2.13"
termcolor = "1.4.1"
codespan-reporting = "0.12"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = "z"
lto = true
# strip = "debuginfo"
codegen-units = 1
panic = "abort"

# TODO: create custom profile when https://github.com/rustwasm/wasm-pack/pull/1428 is available
# [profile.minbin]
# inherits = "release"
# opt-level = "z"
# lto = true
# strip = "debuginfo"
# codegen-units = 1
# panic = "abort"

[package.metadata.wasm-pack.profile.release]
opt-level = "z"
wasm-opt = ["-Oz", "--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
